// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for theme: dark, color: notification-error, icon: car and isFocusable: false 1`] = `
":host {
  display: inline-block;
  position: relative;
}
::slotted(a), ::slotted(button) {
  display: block;
  position: static;
  text-decoration: underline;
  cursor: pointer;
  font: inherit;
  outline: transparent none;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #fff;
  border-radius: 4px;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
::slotted(a) {
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
::slotted(a:hover) {
  color: #ff0223;
}
::slotted(button) {
  margin: 0;
  padding: 0;
  background: 0;
  border: 0;
  color: inherit;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root {
  display: inline-flex;
  align-items: center;
  vertical-align: top;
  padding: 0px 6px 0px 4px;
  box-sizing: border-box;
  border-radius: 4px;
  background: #fec5c5;
  color: #000;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.6666666667;
  transition: color var(--p-transition-duration, .24s) ease;
}
.icon {
  margin-right: 2px;
}"
`;

exports[`getComponentCss() should return correct css for theme: light, color: background-surface, icon: undefined and isFocusable: true 1`] = `
":host {
  display: inline-block;
  position: relative;
}
::slotted(a), ::slotted(button) {
  display: block;
  position: static;
  text-decoration: underline;
  cursor: pointer;
  font: inherit;
  outline: transparent none;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #000;
  border-radius: 4px;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
::slotted(a) {
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
::slotted(a:hover) {
  color: #d5001c;
}
::slotted(button) {
  margin: 0;
  padding: 0;
  background: 0;
  border: 0;
  color: inherit;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root {
  display: inline-flex;
  align-items: center;
  vertical-align: top;
  padding: 2px 6px;
  box-sizing: border-box;
  border-radius: 4px;
  background: #f2f2f2;
  color: #000;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.6666666667;
  transition: color var(--p-transition-duration, .24s) ease;
}
.root:hover {
  color: #d5001c;
}
.icon {
  margin-right: 2px;
}"
`;

exports[`getComponentCss() should return correct css for theme: light, color: default, icon: car and isFocusable: true 1`] = `
":host {
  display: inline-block;
  position: relative;
}
::slotted(a), ::slotted(button) {
  display: block;
  position: static;
  text-decoration: underline;
  cursor: pointer;
  font: inherit;
  outline: transparent none;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #000;
  border-radius: 4px;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
::slotted(a) {
  color: #000;
  transition: color var(--p-transition-duration, .24s) ease;
}
::slotted(a:hover) {
  color: #d5001c;
}
::slotted(button) {
  margin: 0;
  padding: 0;
  background: 0;
  border: 0;
  color: inherit;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root {
  display: inline-flex;
  align-items: center;
  vertical-align: top;
  padding: 0px 6px 0px 4px;
  box-sizing: border-box;
  border-radius: 4px;
  background: #fff;
  color: #000;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.6666666667;
  transition: color var(--p-transition-duration, .24s) ease;
}
.root:hover {
  color: #d5001c;
}
.icon {
  margin-right: 2px;
}"
`;

exports[`getComponentCss() should return correct css for theme: light, color: neutral-contrast-high, icon: highway and isFocusable: true 1`] = `
":host {
  display: inline-block;
  position: relative;
}
::slotted(a), ::slotted(button) {
  display: block;
  position: static;
  text-decoration: underline;
  cursor: pointer;
  font: inherit;
  outline: transparent none;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #000;
  border-radius: 4px;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent;
}
::slotted(a) {
  color: #fff;
  transition: color var(--p-transition-duration, .24s) ease;
}
::slotted(a:hover) {
  color: #d5001c;
}
::slotted(button) {
  margin: 0;
  padding: 0;
  background: 0;
  border: 0;
  color: inherit;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 1px solid transparent;
  outline-offset: 1px;
}
.root {
  display: inline-flex;
  align-items: center;
  vertical-align: top;
  padding: 0px 6px 0px 4px;
  box-sizing: border-box;
  border-radius: 4px;
  background: #323639;
  color: #fff;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.6666666667;
  transition: color var(--p-transition-duration, .24s) ease;
}
.root:hover {
  color: #d5001c;
}
.icon {
  margin-right: 2px;
}"
`;
